feat:Adicionando novas dependencias no pom.xml